--- a/ZTM Vue Course Code/music/package.json
+++ b/ZTM Vue Course Code/music/package.json
@@ -14,7 +14,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vee-validate/rules": "^4.12.4",
+    "firebase": "^8.10.1",
     "pinia": "^2.1.7",
+    "vee-validate": "^4.12.4",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
