--- a/ZTM Vue Course Code/music/package.json
+++ b/ZTM Vue Course Code/music/package.json
@@ -17,6 +17,7 @@
     "@vee-validate/rules": "^4.12.4",
     "firebase": "^8.10.1",
     "pinia": "^2.1.7",
+    "sweetalert": "^2.1.2",
     "vee-validate": "^4.12.4",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
