--- a/ZTM Vue Course Code/music/package.json
+++ b/ZTM Vue Course Code/music/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@vee-validate/rules": "^4.12.4",
     "firebase": "^8.10.1",
+    "howler": "^2.2.4",
     "pinia": "^2.1.7",
     "sweetalert": "^2.1.2",
     "vee-validate": "^4.12.4",
