--- a/ZTM Vue Course Code/music/package.json
+++ b/ZTM Vue Course Code/music/package.json
@@ -21,6 +21,7 @@
     "sweetalert": "^2.1.2",
     "vee-validate": "^4.12.4",
     "vue": "^3.3.11",
+    "vue-i18n": "^9.9.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
